# nlp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.ipynb  pyproject.toml
.github/workflows/: pull-request-test.yaml
examples/: dataset.ipynb  experiments.ipynb  feature_extraction.ipynb  vectorization.ipynb
nlpbox/: __init__.py
nlpbox/core/: __init__.py  classification.py  dataset.py  estimator.py  experiment.py  feature_extractor.py  features.py  metric.py  pipeline.py  vectorizer.py
nlpbox/core/interfaces/: intefaces.py
nlpbox/data/: __init__.py  corpus.py
nlpbox/data/corpus/: mec_ef.py
nlpbox/data/datasets/: __init__.py  corpus_mec_ef.py  dataset_df.py  dataset_mec_ef.py  essay_br.py  mec_ef.py  utils.py
nlpbox/data/resources/: __init__.py
nlpbox/estimators/: __init__.py  sklearn_estimator.py  svm.py
nlpbox/estimators/classification/: catboost_classifier.py  extra_trees_classifier.py  lgbm_classifier.py  lstm_classifier.py  random_forest_classifier.py  svm.py  xgboost_classifier.py
nlpbox/estimators/generic/: lstm.py
nlpbox/estimators/regression/: catboost_regressor.py  extra_trees_regressor.py  lgbm_regressor.py  lstm_regressor.py  random_forest_regressor.py  xgboost_regressor.py
nlpbox/experiments/: simple_experiment.py
nlpbox/experiments/cache/: mixed_feature_cache.py
nlpbox/factory/: __init__.py  class_registry.py  experiment.py  feature_extractor.py  pipeline.py
nlpbox/features/: __init__.py  agreement.py  bert_similarity.py  cohmetrix.py  conjugation.py  connectives_v1.py  connectives_v2.py  descriptive.py  fuzzy_search_similarity.py  lexical_diversity.py  liwc.py  nilc_similarity.py  orthography.py  overlap.py  readability.py  referential_cohesion.py  regency.py  semantic_cohesion.py  semantic_cohesion_transformers.py  sequential_cohesion.py  syntactic_complexity.py  syntactic_patterns_density.py  textual_simplicity.py  tfidf_similarity.py  word_morphosyntactic_information.py  word_segmentation.py
nlpbox/features/utils/: aggregator.py  cache.py  clauses_parser.py  dataclass_feature_set.py  dict_feature_set.py  patterns.py  sentencizers.py
nlpbox/lazy_loading/: __init__.py
nlpbox/metrics/: errors.py  f1_score.py  kappa.py  precision.py  recall.py  utils.py
nlpbox/models/vectorizers/: bert_vectorizer.py
nlpbox/pipelines/: __init__.py  cohmetrix_extratrees.py  cohmetrix_extratrees_classification.py  tfidf_extratrees.py  tfidf_extratrees_classification.py
nlpbox/resources/: __init__.py
nlpbox/vectorizer/: tfidf_vectorizer.py
nlpbox/vectorizers/: __init__.py  bert_vectorizer.py  fasttext_word_vectorizer.py  feature_extractor_vectorizer.py  tfidf_vectorizer.py
requirements/: BR.txt  core.txt  dev.txt  embeddings.txt  trees.txt
src/aibox/nlp/: __init__.py
src/aibox/nlp/cache/: features.py  mixed_feature_cache.py  vectorizers.py
src/aibox/nlp/core/: __init__.py  dataset.py  estimator.py  experiment.py  feature_extractor.py  metric.py  pipeline.py  vectorizer.py
src/aibox/nlp/estimators/: sklearn_estimator.py
src/aibox/nlp/experiments/: simple_experiment.py
src/aibox/nlp/factory/: __init__.py  class_registry.py  experiment.py  feature_extractor.py  pipeline.py  registry.json
src/aibox/nlp/features/: __init__.py  agreement.py  bert_similarity.py  cohmetrix.py  conjugation.py  connectives_v1.py  connectives_v2.py  descriptive.py  fuzzy_search_similarity.py  lexical_diversity.py  liwc.py  nilc_similarity.py  orthography.py  overlap.py  readability.py  referential_cohesion.py  regency.py  semantic_cohesion.py  semantic_cohesion_transformers.py  sequential_cohesion.py  syntactic_complexity.py  (+5 more)
src/nlpbox/: intefaces.py
tests/: test_factories.py  test_features_set.py
(+74 files in other folders)
