[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aibox-nlp"
version = "0.0.1"
description = "AiBox Natural Language Processing Toolkit."
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Development Status :: 3 - Alpha"]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/core.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
trees = {file = ["requirements/trees.txt"]}
embeddings = {file = ["requirements/embeddings.txt"]}
BR = {file = ["requirements/BR.txt"]}
dev = {file = ["requirements/dev.txt"]}
all = {file = ["requirements/trees.txt",
               "requirements/embeddings.txt",
               "requirements/BR.txt",
               "requirements/core.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aibox*"]
namespaces = true

[tool.setuptools.package-data]
"aibox.nlp.factory" = ["*.json"]
